tests/models/enum/named/f32/fail/min_length.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(min_length = 2)]
        value: f32
    },
}
fn main() {}
